[tool.poetry]
name = "programmers-task"
version = "0.1.0"
description = ""
authors = ["dale <homelala@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.2.3"
flask-classful = "0.16.0"
flask-apispec = "0.11.4"
inflection = "0.3.1"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.10"
funcy = "1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
