[tool.poetry]
name = "programmers-task"
version = "0.1.0"
description = ""
authors = ["dale <homelala@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.1.4"
flask-classful = "0.16.0"
flask-apispec = "0.8.8"
inflection = "0.3.1"
flask-sqlalchemy = "^2.5.1"
psycopg2 = "^2.9.10"
funcy = "1.18"
pytest = "5.1.1"
factory-boy = "3.0.1"
MarkupSafe = "2.0.1"
flask-swagger-ui = "^4.11.1"
marshmallow = "3.20.1"
sqlalchemy = "1.4.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
